--- a/config.json
+++ b/config.json
@@ -3,5 +3,7 @@
    "bot_dev_role": "856843645155147797",
    "bot_role": "856843768816074792",
    "logs_channel": "837746355857522728",
-   "bot_reviewer_role": "856843836634169374"
+   "bot_reviewer_role": "856843836634169374",
+   "serverid": "829587314924847174",
+   "panel": "861598416030793728"
 }
