--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,14 +15,17 @@
     "dotenv": "^9.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "express-password-protect": "^1.0.2",
+    "express-session": "^1.17.2",
     "html-to-text": "^7.1.1",
-    "mongoose": "^5.12.9",
+    "maintenance": "0.0.2",
+    "mongoose": "^5.13.5",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
+    "nodejs-server-maintenance": "^2.0.4",
+    "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
-    "sweetalert2": "^11.0.11",
+    "sweetalert2": "^11.1.2",
     "textversionjs": "^1.1.3"
   }
 }
