--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
+    "pug": "^3.0.2",
     "sweetalert2": "^11.1.2",
     "textversionjs": "^1.1.3"
   }
