--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@replit/database": "^2.0.1",
     "body-parser": "^1.19.0",
     "discord.js": "^12.5.3",
     "dotenv": "^9.0.2",
